Adjust top padding for body to prevent navbar overlapping body content at certain widths

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-html body {
-    padding-top: 190px;
-    padding-bottom: 100px;
-}
 .navBar {
     background-color: #FF8888;
 }
@@ -14,6 +10,31 @@ html body {
     margin-right: 1em;
 }
 
+/*  */
+/* Top/Bottom Padding */
+/*  */
+html body {
+    padding-top: 290px;
+    padding-bottom: 100px;
+}
+/* 290px wide */
+@media only screen and (min-width: 290px) {
+    html body {
+        padding-top: 270px;
+    }
+}
+/* 326px wide */
+@media only screen and (min-width: 326px) {
+    html body {
+        padding-top: 220px;
+    }
+}
+/* 768px wide */
+@media only screen and (min-width: 768px) {
+    html body {
+        padding-top: 190px;
+    }
+}
 
 #clearBtn2 {
     display: none;
